# bestel

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-third-party.md  RAG_REFERENCES_VERACITY_AUDIT.md  README.md  ROADMAP.md  SYSTEM_PROMPT.md  download-passive-nodes.ps1  runs-export-20260508-133513.json
crates/bestel/: Cargo.toml  tauri.conf.json
crates/bestel-core/: CORE_KNOWLEDGE.md  Cargo.toml  build.rs
crates/bestel-core/data/: passive_nodes_poe1.json  passive_nodes_poe2.json
crates/bestel-core/examples/: eval_split.rs  ollama_battery.rs  ollama_smoke.rs  probe.rs  probe_repoe_base_items.rs  real_battery.rs  refresh_snapshots.rs  smoke.rs  sources_smoke.rs  synergies_smoke.rs
crates/bestel-core/src/: devlog.rs  lib.rs  prompt.rs  prompts.rs  settings.rs  skills.rs
crates/bestel-core/src/eval/: judge.rs  mod.rs
crates/bestel-core/src/llm/: PROVIDER_NOTES.md  anthropic.rs  claude_cli.rs  codex_cli.rs  detect.rs  kb.rs  keys.rs  local_addendum.md  mcp_config.rs  mod.rs  models.rs  ollama.rs  pob_engine.rs  post_stream.rs  recorder.rs  session_notes.rs  sheet_tools.rs  spawn.rs  tools.rs  turn_classifier.rs  util.rs  verifier.rs  wiki.rs
crates/bestel-core/src/mcp/: mod.rs  server.rs
crates/bestel-core/src/persistence/: kb_versions.rs  lint.rs  migrations.rs  mod.rs  runs.rs  sessions.rs  verifier_results.rs
crates/bestel-core/src/pob/: dict.rs  locator.rs  mod.rs  parser.rs  semantic.rs  signatures.rs  watcher.rs
crates/bestel-core/src/registry/: mod.rs  store.rs  types.rs
crates/bestel-core/src/sheets/: fingerprint.rs  mod.rs  store.rs  types.rs
crates/bestel-core/src/sources/: cache.rs  http.rs  mod.rs  poedb.rs  repoe.rs  repoe_refresh.rs  trade.rs  trade_catalogue.rs  wiki.rs
crates/bestel-core/src/sources/snapshots/: version.txt
crates/bestel-core/src/sources/snapshots/poe1/: base_items.json.zst  cluster_jewels.json.zst  essences.json.zst  fossils.json.zst  gems.json.zst  mods.json.zst  stat_translations.json.zst  uniques.json.zst
crates/bestel-core/src/sources/snapshots/poe2/: base_items.json.zst  mods.json.zst  stat_translations.json.zst  uniques.json.zst
crates/bestel-core/src/sources/snapshots/trade_stats/: poe1.json.zst  poe2.json.zst
crates/bestel-core/src/test_runner/: mod.rs  real_prompts.rs  response_lint.rs  scenario.rs
crates/bestel-driver/: Cargo.toml
crates/bestel-driver/src/: cdp.rs  main.rs  session.rs
crates/bestel-driver/src/commands/: attach.rs  chat.rs  crash.rs  eval.rs  logs.rs  memory.rs  mod.rs  scenario.rs  screenshot.rs
crates/bestel-pob-engine/: Cargo.toml
crates/bestel-pob-engine/src/: calc.rs  error.rs  lib.rs  lifecycle.rs  protocol.rs
crates/bestel-pob-engine/tests/: engine_smoke.rs
crates/bestel-rag/: Cargo.toml
crates/bestel-rag/src/: chunker.rs  engine.rs  ingest.rs  lance.rs  lib.rs  traits.rs  types.rs
crates/bestel-rag/src/embeddings/: mod.rs  ollama.rs  openai.rs
crates/bestel-test/: Cargo.toml
crates/bestel-test/src/: expectations.rs  main.rs  scenario.rs
crates/bestel-tui/: Cargo.toml
crates/bestel-tui/src/: app.rs  items.rs  main.rs  markdown.rs  ui.rs
crates/bestel/capabilities/: default.json
crates/bestel/icons/: icon.icns
crates/bestel/src/: commands.rs  dto.rs  events.rs  main.rs  prompts_watcher.rs  state.rs  titlebar.rs
crates/bestel/ui/: dev-panel.html  index.html  package-lock.json  package.json  prompt-editor.html  tailwind.config.d.ts  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
crates/bestel/ui/src/: App.vue  dev-panel-main.ts  main.ts  prompt-editor-main.ts  router.ts
crates/bestel/ui/src/api/: debug-bridge.ts  identity.ts  markdown.ts  pob-item.ts  tauri.ts  types.ts
crates/bestel/ui/src/components/build-sheet/: BSAskCard.vue  BSDraftedCard.vue  BSInterviewPanel.vue  BSInterviewSidebarCard.vue  BSInviteSidebarCard.vue  BSLinkedSheetCard.vue  BSSectionHead.vue  BSSheetFullModal.vue  BSSheetFullView.vue  BSSheetSavedBanner.vue
crates/bestel/ui/src/components/chat/: ChatComposer.vue  ChatEmptyHero.vue  ChatMessage.vue  ChatPicker.vue  ChatStream.vue  ModeChip.vue  SuggestionCard.vue  ToolCallBadge.vue  VerifyClaimsCard.vue
crates/bestel/ui/src/components/link-viewer/: LinkViewerModal.vue
crates/bestel/ui/src/components/panel/: PanelEmpty.vue  PanelGemDetail.vue  PanelItemCard.vue  PanelMarkdown.vue  PanelMechanic.vue  PanelView.vue
crates/bestel/ui/src/components/pickers/: ApiKeyField.vue  PickerGroupLabel.vue  PickerLayout.vue  PickerListItem.vue  PickerSearchInput.vue  PickerSectionHead.vue  PickerStatusDot.vue  index.ts
crates/bestel/ui/src/components/pickers-v2/: PickerButton.vue  PickerGroupLabel.vue  PickerIcon.vue  PickerKbd.vue  PickerLeader.vue  PickerListItem.vue  PickerModal.vue  PickerSearchInput.vue  PickerSectionHead.vue  PickerStatusDot.vue  index.ts
crates/bestel/ui/src/components/prompt-editor/: PromptEditorBody.vue  PromptEditorRoot.vue  PromptEditorTitleBar.vue  PromptEditorToolbar.vue  PromptFileTree.vue  PromptOutlinePanel.vue  PromptStatusBar.vue
crates/bestel/ui/src/components/registry/: AddBuildModal.vue  BuildRegistryModal.vue  ChatBuildPicker.vue  RegistryRow.vue
crates/bestel/ui/src/components/runic/: GemTooltip.vue  ItemTooltip.vue  NodeTooltip.vue  RunicBox.vue  RunicButton.vue  RunicCheckbox.vue  RunicDivider.vue  RunicHeader.vue  RunicIcon.vue  RunicInput.vue  RunicModal.vue  RunicNumber.vue  RunicProgressBar.vue  RunicRadio.vue  RunicSelect.vue  RunicSlider.vue  RunicTabs.vue  RunicToast.vue  (+3 more)
crates/bestel/ui/src/composables/: useBuildWatcher.ts  usePickerNav.ts  useShortcuts.ts  useStreaming.ts  useToast.ts  useTooltip.ts
crates/bestel/ui/src/stores/: build.ts  chat.ts  chatHistory.ts  prompts.ts  registry.ts  settings.ts  sheet.ts  toasts.ts  ui.ts
crates/bestel/ui/src/styles/: dev-panel.css  fonts.css  global.css  markdown.css  prompt-editor.css  sketch.css  tokens.css
crates/bestel/ui/src/views/: ChatView.vue  ComponentsLab.vue  DebugView.vue
(+300 files in other folders)
