[workspace]
members = ["crates/bestel-core", "crates/bestel-pob-engine", "crates/bestel-rag", "crates/bestel-test", "crates/bestel", "crates/bestel-driver"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Kévin Barfleur"]
repository = "https://github.com/kevinbarfleur/bestel"
description = "Bestel — chronicler of Wraeclast. AI assistant for Path of Exile 1 & 2."

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "process", "io-util", "io-std", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
quick-xml = { version = "0.36", features = ["serialize"] }
notify = "6"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "gzip", "brotli"] }
futures-util = "0.3"
bytes = "1"
dirs = "5"
sha2 = "0.10"
urlencoding = "2"
base64 = "0.22"
# Sprint E — hybrid embedded KB search. arrow-* pinned to lancedb 0.27.2's
# `=57.2` requirement to avoid duplicate-version errors.
lancedb = { version = "0.27", default-features = false }
arrow-array = "57.2"
arrow-schema = "57.2"
lance-index = "=4.0.0"
blake3 = "1"
tiktoken-rs = "0.11"
# Sprint G2 — SQLite mirror for sessions/runs/verifier/lint/kb_versions.
# `bundled` ships SQLite source so no system lib is required on Windows.
rusqlite = { version = "0.32", features = ["bundled", "blob", "chrono", "serde_json"] }
