[package]
name = "bestel-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
build = "build.rs"

[build-dependencies]
zstd = "0.13"

[[example]]
name = "smoke"
path = "examples/smoke.rs"

[[example]]
name = "probe"
path = "examples/probe.rs"

[[example]]
name = "sources_smoke"
path = "examples/sources_smoke.rs"

[[example]]
name = "synergies_smoke"
path = "examples/synergies_smoke.rs"

[[example]]
name = "real_battery"
path = "examples/real_battery.rs"

[[example]]
name = "refresh_snapshots"
path = "examples/refresh_snapshots.rs"

[[example]]
name = "probe_repoe_base_items"
path = "examples/probe_repoe_base_items.rs"

[[example]]
name = "eval_split"
path = "examples/eval_split.rs"

[dev-dependencies]
tokio = { workspace = true }
toml = "0.8"
tempfile = "3"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
quick-xml = { workspace = true }
notify = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }
dirs = { workspace = true }
chrono = { version = "0.4", features = ["clock", "serde"] }
sha2 = { workspace = true }
urlencoding = { workspace = true }
base64 = { workspace = true }
regex = "1"
zstd = "0.13"
toml = "0.8"
bestel-pob-engine = { path = "../bestel-pob-engine" }
bestel-rag = { path = "../bestel-rag" }
blake3 = { workspace = true }
rusqlite = { workspace = true }
