[package]
name = "bestel-driver"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Bestel debug harness — drives a running Bestel instance over CDP."

[[bin]]
name = "bestel-driver"
path = "src/main.rs"

[dependencies]
# Workspace shared
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
# Driver-only — kept out of workspace deps to avoid leaking into the
# main `bestel` crate.
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], default-features = false }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["clock"] }
regex = "1"
