[package]
name = "bestel"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Bestel — chronicler of Wraeclast. Tauri desktop app."

[[bin]]
name = "bestel"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
bestel-core = { path = "../bestel-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = "2"
notify = { workspace = true }
dirs = { workspace = true }
chrono = { version = "0.4", features = ["clock"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
